# datastar

./: .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile-dev  LICENSE  Makefile  README.md  Taskfile.yml  VERSION  biome.json  go.mod  go.sum
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml  support-request.yaml
.github/workflows/: build-sdk-tests.yml  clojure-sdk.yml  deploy-site.yml  enforce-branch-policy.yml  java-sdk-unit-tests.yml  python-publish.yml  sdk-csharp-nuget.yml  sdk-dotnet-nuget.yml  sdk-fsharp-nuget.yml  tests.yml
bundles/: datastar-aliased.js  datastar-aliased.js.map  datastar-core.js  datastar-core.js.map  datastar.js  datastar.js.map
examples/clojure/hello-world/: README.md
examples/dotnet/: Samples.sln
examples/dotnet/CsharpAspServer/: Program.cs
examples/dotnet/FalcoServer/: Program.fs
examples/dotnet/HelloWorld/: HelloWorld.http  Program.cs
examples/go/hello-world/: go.mod  go.sum  hello-world.html  main.go
examples/haskell/hello-world/: Main.hs
examples/java/hello-world/: pom.xml
examples/php/hello-world/: composer.json
examples/python/django/: pyproject.toml
examples/python/fastapi/: app.py
examples/ruby/: Gemfile  progress.ru  threads.ru
examples/rust/: makefile.defs
examples/rust/axum/hello-world/: Cargo.toml
examples/rust/axum/hello-world/src/: main.rs
examples/rust/axum/test-suite/: Cargo.toml  Makefile
examples/rust/axum/test-suite/src/: main.rs
examples/rust/infinite_scroll/: Cargo.toml
examples/rust/infinite_scroll/src/: main.rs
examples/rust/infinite_scroll/templates/: agent.html  agents.html  index.html  more.html  rickroll.html
examples/rust/rama/hello-world/: Cargo.toml
examples/rust/rama/hello-world/src/: main.rs
sdk/: ADR.md  README.md  datastar-sdk-config-v1.json
sdk/clojure/: CHANGELOG.md  README.md  deps.edn
sdk/clojure/sdk/: build.clj  (+1 more)
sdk/dotnet/: README.md
sdk/go/: README.md  consts.go  execute-script-sugar.go  execute.go  fragments-sugar.go  fragments.go  fragments_test.go  signals.go  sse-compression.go  sse.go  types.go
sdk/haskell/: CHANGELOG.md  LICENSE.md  Makefile  README.md  cabal.project  datastar.cabal  dstar.cabal  run
sdk/haskell/src/: ServerSentEventGenerator.hs
sdk/haskell/src/ServerSentEventGenerator/: Class.hs  Constants.hs  Internal.hs  Types.hs
sdk/haskell/src/ServerSentEventGenerator/Server/: Snap.hs
sdk/haskell/src/demo/: Main.hs
sdk/haskell/src/demo/www/: index.html  keats.txt
sdk/haskell/src/test/: Main.hs
sdk/java/: README.md  pom.xml
sdk/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
sdk/php/: README.md  composer.json
sdk/pocketbase/: README.md
sdk/python/: README.md  pyproject.toml
sdk/ruby/: Gemfile  README.md
sdk/rust/: Cargo.toml  Makefile  README.md
sdk/rust/src/: axum.rs  consts.rs  execute_script.rs  lib.rs  merge_fragments.rs  merge_signals.rs  patch_signals.rs  rama.rs  remove_fragments.rs  remove_signals.rs  rocket.rs  testing.rs
sdk/test/: .gitignore  README.md  compare-sse.sh  normalize.sh  test-all.sh  test-get.sh  test-post.sh
sdk/tests/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  runner.go  sdk_tests.go  testdata.go  tests_test.go
sdk/ts/: README.md  build.ts  package.json  pnpm-lock.yaml  tsconfig.json
sdk/typescript/: .gitignore  README.md  build.ts  bun.lockb  deno.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sdk/zig/: README.md  build.zig  build.zig.zon
site/: router.go  routes_bundler.go  routes_bundler.qtpl  routes_bundler.templ  routes_errors.go  routes_errors.templ  routes_errors_init.templ  routes_errors_internal.templ  routes_errors_runtime.templ  routes_examples.go  routes_examples_active_search.go  routes_examples_active_search.templ  routes_examples_animations.go  routes_examples_animations.templ  routes_examples_bad_apple.go  routes_examples_bulk_update.go  routes_examples_bulk_update.templ  routes_examples_click_to_edit.go  routes_examples_click_to_edit.templ  routes_examples_click_to_load.go  routes_examples_click_to_load.templ  routes_examples_csrf.go  routes_examples_csrf.templ  routes_examples_custom_validity.go  routes_examples_dbmon.go  routes_examples_dbmon.templ  routes_examples_delete_row.go  routes_examples_delete_row.templ  routes_examples_dialogs_browser.go  routes_examples_dialogs_browser.templ  routes_examples_disable_button.go  routes_examples_dispatch_custom_event.go  routes_examples_edit_row.go  routes_examples_edit_row.templ  routes_examples_execute_script.go  routes_examples_file_upload.go  routes_examples_file_upload.templ  routes_examples_form_data.go  routes_examples_indicator.go  routes_examples_infinite_scroll.go  (+75 more)
site/smoketests/: aliased_test.go  animations_test.go  attr_false_test.go  attr_object_false_test.go  bad_apple_test.go  bind_keys_test.go  bulk_update_test.go  checkbox_array_test.go  checkbox_boolean_checked_test.go  checkbox_boolean_test.go  checkbox_input_array_test.go  checkbox_input_boolean_checked_test.go  checkbox_input_boolean_test.go  checkbox_input_checked_test.go  checkbox_input_default_test.go  checkbox_input_string_test.go  checkbox_input_value_checked_test.go  checkbox_input_value_test.go  checkbox_value_checked_test.go  checkbox_value_test.go  classes_test.go  click_to_edit_test.go  cloak_test.go  csrf_test.go  custom_plugin_test.go  dbmon_test.go  dialogs_browser_test.go  disable_button_test.go  img_src_bind_test.go  indicator_element_removed_test.go  indicator_test.go  infinite_scroll_test.go  inline_validation_test.go  input_array_test.go  input_signal_test.go  input_value_test.go  json_merged_signals_test.go  key_casing_test.go  lazy_load_test.go  lazy_tabs_test.go  (+62 more)
site/webcomponents/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
tools/intellij-plugin/: CHANGELOG.md  README.md  gradle.properties
tools/vscode-extension/: .gitignore  README.md  datastar-vscode-0.21.4.vsix  datastar-vscode-0.21.5.vsix  datastar-vscode-1.0.0.vsix  datastar-vscode-1.0.1.vsix  datastar-vscode-1.0.2.vsix  package.json
(+895 files in other folders)
