[package]
authors = ["Johnathan Stevers <jmstevers@gmail.com>"]
categories = ["web-programming"]
description = "Datastar is the Rust implementation of the [Datastar](https://data-star.dev) SDK."
edition = "2021"
keywords = ["datastar", "web", "backend"]
license = "MIT OR Apache-2.0"
name = "datastar"
readme = "README.md"
# repository = "https://github.com/starfederation/datastar-rs"
version = "0.1.0"

[dev-dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.1" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"

[dependencies]
axum = { version = "0.8.1", default-features = false, optional = true, features = [
    "query",
    "tokio",
] }
rocket = { version = "0.5.1", default-features = false, optional = true, features = [
] }
serde = { version = "1.0.217", default-features = false, optional = true, features = [
    "derive",
] }
serde_json = { version = "1.0.138", default-features = false, optional = true, features = [
    "std",
] }

[features]
axum = ["dep:axum", "dep:serde", "dep:serde_json"]
default = ["axum", "rocket"]
rocket = ["dep:rocket"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
