[package]
edition = "2021"
name = "infinite_scroll"
version = "0.1.0"

[dependencies]
axum = "0.8.1"
datastar = { path = "../../sdk/rust", features = ["axum"] }
rinja = { version = "0.3.5", features = ["serde_json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
