[package]
edition = "2021"
name = "hello_world"
version = "0.1.0"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.1"
datastar = { path = "../../../../sdk/rust", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
