[package]
edition = "2024"
name = "hello_world"
version = "0.1.0"
rust-version = "1.85.0"

[dependencies]
async-stream = "0.3.6"
rama = { version = "0.2.0-alpha.10", features = ["http-full"] }
datastar = { path = "../../../../sdk/rust", features = ["rama"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
