[package]
edition = "2024"
name = "hello_world"
version = "0.1.0"
rust-version = "1.85.0"

[dependencies]
async-stream = "0.3.6"
datastar = { path = "../../../../sdk/rust", features = ["rama"] }
futures = "0.3.31"
rama = { version = "0.2.0-alpha.13", features = ["http-full"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
